feat: 根据最佳实践重新建立工程，并建立layout、router及状态演示

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "pinia": "^2.0.11",
     "quasar": "^2.0.0",
+    "single-spa": "^5.9.3",
     "single-spa-vue": "^2.5.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.0",
-    "vuex": "^4.0.1"
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
@@ -32,6 +33,7 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.0.0",
+    "file-replace-loader": "^1.4.0",
     "string-replace-loader": "^3.1.0",
     "systemjs-webpack-interop": "^2.3.7"
   },
