--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "quasar": "^2.6.0",
     "single-spa": "^5.9.3",
     "single-spa-vue": "^2.5.1",
+    "spark-md5": "^3.0.2",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
