--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "jwt-decode": "^3.1.2",
+    "mitt": "^3.0.0",
     "normalizr": "^3.6.2",
     "pinia": "^2.0.11",
     "qs": "^6.10.3",
